fix alignment

--- a/app/assets/stylesheets/_thumbnail.css.scss
+++ b/app/assets/stylesheets/_thumbnail.css.scss
@@ -4,7 +4,7 @@
 .cells {
   background-color: white;
   padding: 5px 5px 15px 5px;
-  margin: 5px;
+  margin: 7px 4px;
   border-radius: 4px;
 }
 
